--- a/cv/beane_cv.tex
+++ b/cv/beane_cv.tex
@@ -281,8 +281,18 @@ Ness,~M.~K., Johnston,~K.~V., Blancato,~K., Rix,~H.-W., {\bf Beane,~A.}, Bird,~J
 % \hypersetup{linkcolor=grey}%
 % \begin{list}{}{\hogglist}
 % \item
-% Zhang,~X.~A., {\bf Beane,~A.}, \& Hernquist,~L.
-% \textcolor{grey}{Why do stellar bars counter-rotate in TNG-50?}
+% Zhang,~X.~A., {\bf Beane,~A.}, \& Hernquist,~L. \textcolor{grey}{Why do stellar bars counter-rotate in TNG-50?}
+% \item
+% {\bf Beane,~A.}, Johnson,~J., Semenov,~V., Hernquist,~L., Chandra,~V., Conroy,~C. \textcolor{grey}{Rising from the Ashes II.: How the Milky Way's Bar Formation Gave Rise to the Abundance Bimodality}
+% \end{list}
+
+% \hypersetup{linkcolor=black}%
+% \hoggheading{Advising}%% use \etal when there are >9 authors!
+% \hypersetup{linkcolor=grey}%
+% \begin{list}{}{\hogglist}
+% \item
+% \deemph{co-advised} Xinyue Alice Zhang, Harvard undergraduate \deemph{May 2022 - present}
+% \item \deemph{co-advised} Dana Jones \& Skyler Palatnick, UPenn undergradutes \deemph{May 2018 - Mar 2021}
 % \end{list}
 
 \hypersetup{linkcolor=black}%
